themes/finna2/less/finna/myresearch.less
/* ... */
// Custom styles for user account functions
.template-dir-myresearch, .template-dir-holds, .template-dir-search.template-name-history, .template-dir-librarycards {
  padding-bottom: 30px;
  h1 {
    font-weight: 500;
  }
  .my-research-content {
    width: 100%;
    border-radius: @border-radius-base;
  }
  h1 {
    display: inline-block;
  }
  #account-actions {
    margin-bottom: 20px;
    #import-export-buttons {
      margin-right: 20px;
    }
    .btn {
      margin-bottom: 5px;
    }
  }
  .pickup-location {
    margin-top: 3px;
    margin-bottom: 3px;
  }
  .pickup-locations {
    overflow-y: auto;
    max-height: 280px;
    left: auto;
    max-width: 280px;
    overflow-x: hidden;
    position: absolute;
    right: 0;
    @media(max-width: @screen-xs-max) {
      left: -40px;
      right: auto;
    }
    a {
      cursor: pointer;
    }
  }
  #card_name {
    width: 205px;
  }

  .resource-note {
    margin-left: -5px;
  }

  .checkboxFilter label.checkbox {
    padding-left: 5px;
    color: @gray-light;
  }
  @media(max-width:@screen-md-max) {
    .paginationSimple {
      margin-top: 0;
    }
  }
  .paginationSimple {
    margin-left: 5px;
  }
  .no-padding-table {
    th, td {
      padding: 8px 0;
      vertical-align: middle;
    }
    th {
      width: 25%;
    }
    td {
      width: 75%;
    }
  }

  p.no-content-message {
    margin-top: 5px;
  }
  .borrowing-block-container {
    p.borrowing-block {
      padding: 0;
      margin-bottom: 0;
    }
  }
  .support-notice {
    margin: 0;
    margin-top: 5px;
    padding: 10px 15px;
  }

  .library-card-terms {
    background-color: @state-info-bg;
    padding: 2em;
    padding-left: 2.5em;
    margin-bottom: 1em;
  }

  .profile-status i::before {
    display: inline-block;
  }
}

.useraccount-header {
  display: flex;
  flex-direction: column;
  align-items: baseline;
  justify-content: space-between;
  margin-top: 5px;
  margin-bottom: 5px;
  @media (max-width: @screen-md-max) {
    margin-top: 10px;
  }
  h2, h3 {
    line-height: 1.5;
    font-weight: 600;
    margin-top: 0;
    margin-bottom: 10px;
  }
  h2 {
    font-size:@font-size-h2;
  }
  h3 {
    font-size: @font-size-h4;
  }
  .list-title {
    font-size: @font-size-h2;
  }
  a.dropdown-toggle {
    font-size: 0.9em;
    height: 30px;
  }
}
.sort-col.sort-col-mobile {
    @media(min-width: @screen-sm) {
    display: none;
  }
}

.toolbar .list-functions .sort-col {
    @media(max-width: @screen-sm) {
      display: none;
    }
  }

.online-payment-form > .payment-row {
  .online-payment-area {
    display: inline-block;
    .online-payment-form {
      display: inline-block;
      input {
        font-weight: bold;
      }
    }
    margin-bottom: 15px;
  }
  @media (min-width: @screen-sm) {
    > img {
      position: relative;
      bottom: 100px;
      float: right;
    }
  }
  @media (max-width: @screen-sm-min) {
    position: -webkit-sticky;
    position: sticky;
    top: 64px;
    background-color: white;
    width: 100%;
    padding: 12px 0px;
    input[type=submit] {
      margin-top: 10px;
    }
    > img {
      width: 15%;
      min-width: 40px;
      max-width: 60px;
      margin-top: 10px;
    }
  }
}

.myresearch-table.online-payment {
  .checkbox-col {
    width: initial;
  }
  .toolbar {
    border: 0;
    padding-bottom: 0;
    padding-left: 9px;
  }
}

.fines-info-area {
  margin-bottom: 15px;
  div.card-holder {
    display: flex;
    align-items: center;
    font-weight: bold;
  }
  .amount {
    font-weight: bold;
  }
  .online-payment-info {
    display: flex;
    align-items: baseline;
  }
  #online_payment_minimum_payment {
    margin: 0 0 0 1em;
    padding: 6px;
  }
  .last-transaction-information {
    &:extend(.alert);

    background: @gray-ultralight;
    border: 1px solid @gray-lighter;
    display: flex;
    align-items: center;
    div {
      flex: 1 1;
    }
  }
}

.toolbar-sticky-container {
  margin: 0;
  @media (max-width: @screen-md) {
    .row();
    padding: 0px 15px;
  }
  .toolbar-sticky {
    position: sticky;
    top: 0;
    background-color: @body-bg;
    z-index: 2;
    &.isSticky {
      margin: 0px -15px;
      padding: 0px 15px;
      @media (max-width: @screen-md) {
        top: @navbar-height;
      }
      @media (max-width: @screen-sm) {
        box-shadow: 0 3px 3px rgba(0,0,0,.3);
        .toolbar {
          border-bottom: none;
        }
      }
    }
  }
}

.myresearch-table .toolbar {
  .checkboxFilter.mylist-select-all {
    margin-right: 0;
    float: none;
    span {
      font-size: 11px;
      top: 4px;
      left: ~"-webkit-calc(50% + 10px)";
      left: ~"-moz-calc(50% + 10px)";
      left: ~"calc(50% + 10px)";
      position: absolute;
      width: 70px;
    }
  }
  .checkboxFilter .checkbox label {
    font-size: 13px;
  }
}

.myresearch-table.online-payment .toolbar {
  align-items: center;
  margin-bottom: 1rem;

  .checkboxFilter.mylist-select-all {
    margin-right: 1rem;
  }
}

.template-dir-myresearch .toolbar, .template-dir-holds .toolbar {
  margin: 0;
  margin-top: 5px;
  border-bottom: 1px solid @gray-lighter;
  padding: 3px 0;
  @media(max-width: @screen-md) {
    margin-top: 0;
  }
  .status-text {
    float: right;
    line-height: 38px;
  }
  &.bottom {
    border-top: 1px solid @gray-lighter;
    border-bottom: none;
    td {
      vertical-align: middle;
      &:first-child {
        vertical-align: top;
        padding-top: 10px;
      }
      &:nth-child(2) {
        width: 100%;
      }
    }
  }
}

.online-payment-data {
  font-size: 1.2em;
  margin-bottom: 40px;
  padding-right: 8px;
  @media (min-width: @screen-sm) {
    width: 50%;
    float: right;
  }
  .amount {
    font-weight: bold;
  }
}

.online-payment-note {
  margin-bottom: 40px;
  @media (min-width: @screen-sm) {
    width: 50%;
    float: left;
  }
}
/* ... */

